--- a/Numpy/Array.ipynb
+++ b/Numpy/Array.ipynb
@@ -11,9 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "数据： [ 5 10 12  6] \n",
+      "维度: 1\n",
+      "数据：\n",
+      " [[ 5.  10.  12.   6. ]\n",
+      " [ 5.1  8.2 11.   6.3]\n",
+      " [ 4.4  9.1 10.   6.6]] \n",
+      "维度: 2\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -50,9 +64,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.  10.  12.   6.   5.2  4.2]\n",
+      "test1加维度后  [[ 5 10 12  6]]\n",
+      "test2加维度后  [[ 5.1  8.2 11.   6.3]]\n",
+      "括展后\n",
+      " [[ 5.  10.  12.   6. ]\n",
+      " [ 5.1  8.2 11.   6.3]]\n",
+      "第一维度叠加：\n",
+      " [[ 5.  10.  12.   6. ]\n",
+      " [ 5.1  8.2 11.   6.3]\n",
+      " [ 5.  10.  12.   6. ]\n",
+      " [ 5.1  8.2 11.   6.3]]\n",
+      "第二维度叠加：\n",
+      " [[ 5.  10.  12.   6.   5.  10.  12.   6. ]\n",
+      " [ 5.1  8.2 11.   6.3  5.1  8.2 11.   6.3]]\n"
+     ]
+    }
+   ],
    "source": [
     "#concatenate()   连接数组\n",
     "\n",
@@ -94,9 +129,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "竖直合并\n",
+      " [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]\n",
+      " [7 8]]\n",
+      "水平合并\n",
+      " [[1 2 5 6]\n",
+      " [3 4 7 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([\n",
     "[1,2],[3,4]\n",
@@ -127,9 +177,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 5.  10.  12.   6.   5.2  4.2]\n",
+      "总共多少测试数据： 6\n",
+      "[[ 5.  10.  12.   6. ]\n",
+      " [ 5.1  8.2 11.   6.3]]\n",
+      "第一个维度： 2\n",
+      "第二个维度： 4\n",
+      "所有维度： (2, 4)\n",
+      "float64\n"
+     ]
+    }
+   ],
    "source": [
     "print(cars)\n",
     "print(\"总共多少测试数据：\", cars.size)\n",
@@ -143,9 +208,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1 shape: (2, 3)\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "a2 shape: (3, 1, 2)\n",
+      "[[[1 2]]\n",
+      "\n",
+      " [[3 4]]\n",
+      "\n",
+      " [[5 6]]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1,2,3,4,5,6])\n",
     "a1 = a.reshape([2, 3])\n",
