--- a/Numpy/change.ipynb
+++ b/Numpy/change.ipynb
@@ -33,9 +33,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a1 shape: (2, 3)\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "a2 shape: (3, 1, 2)\n",
+      "[[[1 2]]\n",
+      "\n",
+      " [[3 4]]\n",
+      "\n",
+      " [[5 6]]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -53,9 +69,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 1) (6, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "# np.expand_dims() # 增加维度\n",
     "\n",
@@ -67,9 +91,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6,)\n",
+      "(6,)\n"
+     ]
+    }
+   ],
    "source": [
     "# np.squeeze() # 减少维度\n",
     "\n",
@@ -81,9 +114,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1 11]\n",
+      " [ 2 22]\n",
+      " [ 3 33]\n",
+      " [ 4 44]\n",
+      " [ 5 55]\n",
+      " [ 6 66]]\n"
+     ]
+    }
+   ],
    "source": [
     "#np.column_stack() # 合并列\n",
     "\n",
@@ -95,9 +141,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.  1.1]\n",
+      " [1.  2.2]]\n"
+     ]
+    }
+   ],
    "source": [
     "#  np.row_stack() # 合并行\n",
     "\n",
@@ -109,9 +164,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]\n",
+      " [7 8]]\n",
+      "[[1 2 5 6]\n",
+      " [3 4 7 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "# np.concatenate()\n",
     "\n",
@@ -124,9 +192,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[ 1, 11,  2, 22],\n",
+      "       [ 3, 33,  4, 44]]), array([[ 5, 55,  6, 66],\n",
+      "       [ 7, 77,  8, 88]])]\n",
+      "[array([[ 1, 11,  2, 22],\n",
+      "       [ 3, 33,  4, 44]]), array([[ 5, 55,  6, 66]]), array([[ 7, 77,  8, 88]])]\n"
+     ]
+    }
+   ],
    "source": [
     "#  np.vsplit() # 垂直分割\n",
     "a = np.array(\n",
@@ -141,9 +221,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[ 1, 11,  2, 22],\n",
+      "       [ 3, 33,  4, 44]]), array([[ 5, 55,  6, 66],\n",
+      "       [ 7, 77,  8, 88]])]\n",
+      "[array([[ 1, 11],\n",
+      "       [ 3, 33],\n",
+      "       [ 5, 55],\n",
+      "       [ 7, 77]]), array([[2],\n",
+      "       [4],\n",
+      "       [6],\n",
+      "       [8]]), array([[22],\n",
+      "       [44],\n",
+      "       [66],\n",
+      "       [88]])]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array(\n",
     "[[ 1, 11, 2, 22],\n",
